캐러셀 추가

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR" rel="stylesheet">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./index.css">
+    
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.css">
+    <link rel="stylesheet" href="./css/index.css">
 
 </head>
 <body>
@@ -82,7 +85,17 @@
         <div class="gnb_dimmed"></div>
     </header>
     <section class="banner_wrap">
-        
+        <div class="owl-carousel">
+            <div>
+                <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg" class="bg_img" alt="">
+            </div>
+            <div>
+                <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20212/26/9EFKZ7YRZ6AZXM3220210226052125126.jpg" class="bg_img" alt="">
+            </div>
+            <div>
+                <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20209/8/MMYPV8QO5YRX0F7820200908081836459.jpg" class="bg_img" alt="">
+            </div>
+          </div>
     </section>
     <section class="info_wrap">
 
@@ -94,6 +107,7 @@
 
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
