--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./css/owl.theme.default.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/index.css">
 
 </head>
@@ -84,25 +84,114 @@
         </nav>
         <div class="gnb_dimmed"></div>
     </header>
-    <section class="banner_wrap">
-        <div class="owl-carousel">
-            <div>
-                <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg" class="bg_img" alt="">
+    <main>
+        <section class="banner_wrap">
+            <h2 class="blind">Main Intro Banner</h2>
+            <div class="owl-carousel">
+                <div>
+                    <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/202012/11/C48K2D3ERF9CXYFU20201211010830972.jpg" class="bg_img" alt="">
+                </div>
+                <div>
+                    <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20212/26/9EFKZ7YRZ6AZXM3220210226052125126.jpg" class="bg_img" alt="">
+                </div>
+                <div>
+                    <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20209/8/MMYPV8QO5YRX0F7820200908081836459.jpg" class="bg_img" alt="">
+                </div>
             </div>
-            <div>
-                <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20212/26/9EFKZ7YRZ6AZXM3220210226052125126.jpg" class="bg_img" alt="">
+            <ul class='owl-dots'> 
+                <li class='owl-dot'>
+                    <button type="button" class="slider_button">CRIMSON DESERT</button>
+                </li> 
+                <li class='owl-dot'>
+                    <button type="button" class="slider_button">BLACK DESERT 5th</button>
+                </li> 
+                <li class='owl-dot'>
+                    <button type="button" class="slider_button">PEARL ABYSS</button>
+                </li> 
+            </ul>
+        </section>
+        <section class="info_wrap">
+            <div class="info_top">
+                <h2 class="bold">추천게임</h2>
+                <div class="btn_wrap">
+                    <a href="#" class="custommer_center hover_blue">고객센터</a>
+                    <a href="#" class="guard_center hover_blue">보안센터</a>
+                </div>
             </div>
-            <div>
-                <img src="https://s1.pearlcdn.com/pearlabyss/Upload/thumbnail/20209/8/MMYPV8QO5YRX0F7820200908081836459.jpg" class="bg_img" alt="">
+            <div class="info_contents">
+                <ul class="recommend">
+                    <li>
+                        <a href="#">
+                             <span class="recommend_img"><img src="./img/game_bdo_char.png" alt=""></span>
+                             <span class="recommend_mark">MMORPG</span>
+                             <span class="recommend_title bold">검은사막</span>
+                             <span class="recommend_reason">글로벌 서비스</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                             <span class="recommend_img"><img src="./img/game_bdm_char.png" alt=""></span>
+                             <span class="recommend_mark">MMORPG</span>
+                             <span class="recommend_title bold">검은사막 모바일</span>
+                             <span class="recommend_reason">글로벌 서비스</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                             <span class="recommend_img"><img src="./img/game_sha_char.png" alt=""></span>
+                             <span class="recommend_mark">Battle Royale</span>
+                             <span class="recommend_title bold">섀도우 아레나</span>
+                             <span class="recommend_reason">글로벌 서비스</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                             <span class="recommend_img"><img src="./img/game_cd_char_v1.png" alt=""></span>
+                             <span class="recommend_mark">Adventure</span>
+                             <span class="recommend_title bold">붉은사막</span>
+                             <span class="recommend_reason">개발중</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                             <span class="recommend_img"><img src="./img/game_dokev_char.png" alt=""></span>
+                             <span class="recommend_mark">Open World MMO</span>
+                             <span class="recommend_title bold">도깨비</span>
+                             <span class="recommend_reason">개발중</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="login">
+                    <div class="login_nexonid">
+                        <a href="#" class="bold">PEARL ABYSS ID 로그인</a>
+                    </div>
+                    <div class="login_etc">
+                        <a href="#" class="bold">일회용 로그인</a>
+                        <a href="#" class="bold">QR 로그인</a>
+                    </div>
+                    <div class="login_other">
+                        <p>다른 계정 간편 로그인</p>
+                        <ul>
+                            <li><a href="#"><i class="icn_login icn_google"></i><span class="blind">google</span></a></li>
+                            <li><a href="#"><i class="icn_login icn_facebook"></i><span class="blind">facebook</span></a></li>
+                            <li><a href="#"><i class="icn_login icn_naver"></i><span class="blind">naver</span></a></li>
+                            <li><a href="#"><i class="icn_login icn_apple"></i><span class="blind">apple</span></a></li>
+                        </ul>
+                    </div>
+                    <div class="login_support">
+                        <div class="find">
+                            <a href="#" class="hover_blue">넥슨 ID찾기</a>
+                            <a href="#" class="hover_blue">비밀번호 찾기</a>
+                        </div>
+                        <a href="#" class="login_join hover_blue">회원가입</a>
+                    </div>
+                </div>
             </div>
-          </div>
-    </section>
-    <section class="info_wrap">
+        </section>
+        <section class="game_wrap">
 
-    </section>
-    <section class="game_wrap">
-
-    </section>
+        </section>
+    </main>
     <footer>
 
     </footer>
