--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </section>
         <section class="info_wrap">
             <div class="info_top">
-                <h2 class="bold">추천게임</h2>
+                <h2 class="section_title bold">추천게임</h2>
                 <div class="btn_wrap">
                     <a href="#" class="custommer_center hover_blue">고객센터</a>
                     <a href="#" class="guard_center hover_blue">보안센터</a>
@@ -188,8 +188,43 @@
                 </div>
             </div>
         </section>
-        <section class="game_wrap">
-
+        <section class="game_wrap type_thumbnail">
+            <div class="game_top">
+                <h2 class="section_title bold">전체게임</h2>
+                <div class="view_type">
+                    <button type="button" class="btn btn_thumbnail">
+                        <span class="btn_elem thumbnail_dot"></span>
+                        <span class="btn_elem thumbnail_dot"></span>
+                        <span class="btn_elem thumbnail_dot"></span>
+                        <span class="btn_elem thumbnail_dot"></span>
+                        <span class="blind">썸네일 형식으로 보기</span>
+                    </button>
+                    <button type="button" class="btn btn_list">
+                        <span class="btn_elem list_bar"></span>
+                        <span class="btn_elem list_bar"></span>
+                        <span class="btn_elem list_bar"></span>
+                        <span class="blind">리스트 형식으로 보기</span>
+                    </button>
+                </div>
+                <div class="search_box">
+                    <input type="text" class="input_search" placeholder="게임명 검색">
+                    <button type="button" class="btn btn_search"><span class="blind">검색</span></button>
+                </div>
+            </div>
+            <ul class="filter_list">
+                <li class="filter_item on">
+                    <button type="button">#MMORPG</button>
+                </li>
+                <li class="filter_item">
+                    <button type="button">#ACTION</button>
+                </li>
+                <li class="filter_item">
+                    <button type="button">#FPS</button>
+                </li>
+                <li class="filter_item">
+                    <button type="button">#CASUAL</button>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
