--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="info_contents">
                 <ul class="recommend">
-                    <li>
+                    <li class="rec_bdo rec_item">
                         <a href="#">
                              <span class="recommend_img"><img src="./img/game_bdo_char.png" alt=""></span>
                              <span class="recommend_mark">MMORPG</span>
@@ -128,7 +128,7 @@
                              <span class="recommend_reason">글로벌 서비스</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="rec_bdm rec_item">
                         <a href="#">
                              <span class="recommend_img"><img src="./img/game_bdm_char.png" alt=""></span>
                              <span class="recommend_mark">MMORPG</span>
@@ -136,7 +136,7 @@
                              <span class="recommend_reason">글로벌 서비스</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="rec_sha rec_item">
                         <a href="#">
                              <span class="recommend_img"><img src="./img/game_sha_char.png" alt=""></span>
                              <span class="recommend_mark">Battle Royale</span>
@@ -144,7 +144,7 @@
                              <span class="recommend_reason">글로벌 서비스</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="rec_cd rec_item">
                         <a href="#">
                              <span class="recommend_img"><img src="./img/game_cd_char_v1.png" alt=""></span>
                              <span class="recommend_mark">Adventure</span>
@@ -152,7 +152,7 @@
                              <span class="recommend_reason">개발중</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="rec_dokev rec_item">
                         <a href="#">
                              <span class="recommend_img"><img src="./img/game_dokev_char.png" alt=""></span>
                              <span class="recommend_mark">Open World MMO</span>
@@ -163,11 +163,11 @@
                 </ul>
                 <div class="login">
                     <div class="login_nexonid">
-                        <a href="#" class="bold">PEARL ABYSS ID 로그인</a>
+                        <a href="#" class="hover_blue bold">PEARL ABYSS ID 로그인</a>
                     </div>
                     <div class="login_etc">
-                        <a href="#" class="bold">일회용 로그인</a>
-                        <a href="#" class="bold">QR 로그인</a>
+                        <a href="#" class="hover_blue bold">일회용 로그인</a>
+                        <a href="#" class="hover_blue bold">QR 로그인</a>
                     </div>
                     <div class="login_other">
                         <p>다른 계정 간편 로그인</p>
