--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
             <div class="game_top">
                 <h2 class="section_title bold">전체게임</h2>
                 <div class="view_type">
-                    <button type="button" class="btn btn_thumbnail">
+                    <button type="button" class="btn js_btn_thumbnail">
                         <span class="btn_elem thumbnail_dot"></span>
                         <span class="btn_elem thumbnail_dot"></span>
                         <span class="btn_elem thumbnail_dot"></span>
                         <span class="btn_elem thumbnail_dot"></span>
                         <span class="blind">썸네일 형식으로 보기</span>
                     </button>
-                    <button type="button" class="btn btn_list">
+                    <button type="button" class="btn js_btn_list">
                         <span class="btn_elem list_bar"></span>
                         <span class="btn_elem list_bar"></span>
                         <span class="btn_elem list_bar"></span>
@@ -649,7 +649,7 @@
             </address>
         </div>
         <a href="#" class="footer_logo">
-            <img src="https://s1.pearlcdn.com/pearlabyss/contents/img/common/cm_bi_black.svg" alt="Pearl Abyss Official Site">
+            <img src="https://s1.pearlcdn.com/pearlabyss/contents/img/common/cm_bi_white.svg" alt="Pearl Abyss Official Site">
         </a>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
