--- a/index.html
+++ b/index.html
@@ -105,11 +105,8 @@
                 <li class='owl-dot'>
                     <button type="button" class="slider_button"><span class="blind">BLACK DESERT 5th</span></button>
                 </li> 
-                <li class='owl-dot'>
+                <li class='owl-dot' id="last-slider">
                     <button type="button" class="slider_button"><span class="blind">PEARL ABYSS</span></button>
-                </li>
-                <li class="owl-dot fake-dot fake-first">
-                    <button type="button" class="slider_button"></button>
                 </li>
             </ul>
         </section>
