--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <section class="pc_game_wrap">
                 <div class="device_type">
                     <h3 id="pc_title" class="bold">PC게임</h3>
-                    <button type="button" class="bold">MOBILE게임</button>
+                    <button type="button" class="js_btn_molink bold">MOBILE게임</button>
                 </div>
                 <ul class="pc_list">
                     <li class="pc_item filter_all filter_mmorpg on event">
@@ -479,7 +479,7 @@
             <section class="mobile_game_wrap">
                 <div class="device_type">
                     <h3 id="mobile_title" class="bold">MOBILE게임</h3>
-                    <button type="button" class="bold">PC게임</button>
+                    <button type="button" class="js_btn_pclink bold">PC게임</button>
                 </div>
                 <ul class="mobile_list">
                     <li class="mobile_item filter_all filter_mmorpg on event">
